# McQuic

./: .gitignore  LICENSE  README.md  b.npy  clean_run.sh  debug.sh  down.sh  environment.yaml  environment.yml  get-mcquic.sh  install.ps1  install.sh  install_apex_slurm.sh  main.py  multinode.sh  multinode_gen.sh  note.md  pyproject.toml  resume_training.sh  run.sh  setup.cfg  setup.py  singlenode.sh  singlenode_gen.sh  test.py  test_generator.py  test_infer.py  test_wds.py  tsv_download.py  upload_saved_model.py
.github/workflow/: toc.yaml
.github/workflows/: auto-deploy-huggingface.yml  auto-generate-config-schemas.yml  auto-genererate-rans-stub.yml  auto-update-models-hash.yml  config-schemas.yml  create-new-release.yml  debug.yml  docker-build.yml  nightly-docker-build.yml  test-all.yml  test-install.yml  toc.yaml
ci/: _github_actions_cache.yml  add_entry_points.py  generate_schema.py  write_entry_points.py
ci/post_build/: rename_package.py  win_install_post_link.py
ci/pre_build/: add_entry_points.py  cfg_entry_points.py  check_today_has_commit.py
ci/pre_commit/: finalize.py  generate_schema.py  update_hf_space_require.py  update_model_hash.py
conda/: bld.bat  build.sh  exec.ps  exec.ps1  exec.sh  finalize.py  meta.yaml  post-link.bat  post-link.sh  write_entry_points.py
configs/: 12_13+11+9.yaml  3-14+12+10.yaml  32new.yaml  32plain.yaml  3_14+12+10.yaml  8-13+11+9.yaml  README.md  a800_16.yaml  a800_8.yaml  a800_gen_16.yaml  ag-v100.yaml  ag_v100.yaml  architecture.yaml  config.schema.json  config.yaml  example.yaml  finetune-v100.yaml  gan-v100.yaml  gan_12306.yaml  gan_v100.yaml  journey.yaml  journey_mcq.yaml  neon.yaml  neon_gen.yaml  noattention-v100.yaml  plain-1080ti.yaml  plain-v100.yaml  plain_12306.yaml  plain_v100.yaml  relax.yaml  schema.json  schema.md  schema.yaml  test.yaml
configs/imagenet/: a800_gen_16_forward.yaml
configs/psnr/: 2-13+11+9.yaml  8-13+11+9.yaml
configs/ssim/: 2-13+11+9.yaml  2-14+12+10.yaml
deploy/: Makefile
deploy/docker/: Dockerfile  environment.yaml  environment.yml
docker/: Dockerfile  README.md  build.sh  demo  environment.yml  train.sh
docker/payload/: environment.yml
generation_saved/240423-172133/: config.yaml
generation_saved/latest/: config.yaml
mcqc/: __main__.py  consts.py
mcqc/algorithms/: new.py  pixelCNN.py
mcqc/datasets/: __init__.py  dataset.py  prefetcher.py
mcqc/evaluation/: refModel.py
mcqc/loss/: __init__.py
mcqc/models/: compressor.py  entropyCoder.py  quantizer.py
mcqc/nn/: gdn.py
mcqc/training/: __init__.py  __main__.py  trainer.py
mcqc/utils/: helper.py  registry.py
mcqc/validation/: meters.py  validator.py
mcquic/: __init__.py  __main__.py  baseClass.py  cli.py  config.py  consts.py  demo.py  rans.pyi
mcquic/algorithms/: __init__.py  new.py  pixelCNN.py
mcquic/data/: __init__.py  __main__.py  cli.py  cli_image_text.py  cli_lmdb.py  dataset.py  imagenet_classes.py  (+1 more)
misc/: codec-run.py  comparison-tf.py  comparison.py  datasetCreate.py
scripts/: eval_generator.py  eval_tokenizer.py
src/: main.py  relax.py  setup.py
(+214 files in other folders)
