[metadata]
name = mcquic
version = 0.0.9
description = McQuic, a.k.a. Multi-codebook Quantizers for neural image compression
long_description = file: README.md #, CHANGELOG.rst, LICENSE.rst
keywords = image-compression, pytorch, computer-vision
license = Apache-2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
url = https://github.com/xiaosu-zhu/McQuic
author = Xiaosu Zhu
author_email = xiaosu.zhu@outlook.com

[options]
include_package_data = True
packages = find:
install_requires =
    torch >= 1.9
    compressai >= 1.1.9
    vlutils >= 0.1.10
python_requires = >=3.9

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    mcquic = mcquic.cli:entryPoint
    mcquic-train = mcquic.train.cli:entryPoint
