[metadata]
name = mcquic
version = mcquic:__version__
description = McQuic, a.k.a. Multi-codebook Quantizers for neural image compression
long_description = file: README.md
long_description_content_type = text/markdown
keywords = image-compression, pytorch, computer-vision
license = Apache-2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU :: NVIDIA CUDA :: 11.0
    Environment :: GPU :: NVIDIA CUDA :: 11.1
    Environment :: GPU :: NVIDIA CUDA :: 11.2
    Environment :: GPU :: NVIDIA CUDA :: 11.3
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
url = https://github.com/xiaosu-zhu/McQuic
author = Xiaosu Zhu
author_email = xiaosu.zhu@outlook.com

[options]
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    mcquic = mcquic.cli:entryPoint
    mcquic-train = mcquic.train.cli:entryPoint
